# stemmons-draftsman

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp_lcd_axs15231b/: CMakeLists.txt  esp_lcd_axs15231b.c  idf_component.yml
components/esp_lcd_axs15231b/include/: esp_lcd_axs15231b.h
docs/: Adding-LVGL.md  Bring-Up-Checklist.md  Building-and-Flashing.md  GPS-uBlox7.md  Home.md  Pinout-and-Hardware.md  disp_on_off-Inversion.md  pinout.md
main/: CMakeLists.txt  board.h  demo_audio.c  demo_sdcard.c  demo_touchpaint.c  demo_wifi_battery.c  demos.h  font8x8.h  idf_component.yml  main.c  ui.c  ui.h  usb_msc.c  usb_msc.h
